Clean code + a few methods + relations in DB